# PAM

./: .gitattributes  .gitignore  BurstBrowser.m  CHANGELOG.md  CONTRIBUTING.md  Copyrights.txt  CrossCorrBurst.m  CrossCorrelation.m  DifSim.mexw64  Do_CCF.mexmaci64  Do_CCF.mexw64  Do_CCF_new.mexmaci64  FCSFit.asv  FCSFit.m  FabsurfInfo.m  GTFit.m  GTauFit.m  GenerateName.m  GlobalPDAFit.m  GlobalTauFit.m  LICENSE.md  LSUserValues.m  Launcher.m  LoadTcspc.m  LookSetup.m  MIAFit.m  Make_Spectrum.m  Mia.m  New Pam.pptx  PAM.m  PCFAnalysis.m  PDAFit.m  Pam.m  Pam.prj  ParticleDetection.m  ParticleDetection_Tiff.m  ParticleViewer.m  ParticleViewer_NP_Tiff.m  Phasor.m  PhasorTIFF.m  (+15 more)
C++ Files/: DifSim.cpp  Do_CCF.c  Do_CCF_mac.c  Do_CCF_new.c  Do_CCF_new_mac.c
Models/: 2D_Gaussian_2Sigmas_Angle_Cor.miafit  2D_Gaussian_Cor.miafit  FCS_2Focus_D.txt  FCS_D.txt  FCS_D_2Component.txt  FCS_D_2exp.txt  FCS_D_Background.txt  FCS_D_afterpulsing.txt  FCS_FRETFCCS.txt  FCS_SCCF_2exp_TauD_anomalous.txt  FCS_SCCF_3exp_TauD_anomalous.txt  FCS_SCCF_TauD_anomalous.txt  FCS_Scanning.txt  FCS_TauD.txt  FCS_TauD_Background.txt  FCS_TauD_Bleaching.txt  FCS_TauD_anomalous.txt  FCS_TauD_anomalous_2kin.txt  FCS_flow.txt  FRET_Beta4.txt  FRET_Gauss3.txt  FRET_Gauss4.txt  PCF_GammaDistribution.txt  PCF_LogGaussian.txt  PCF_LogNormal.txt  RICS_2Comp_Imm.miafit  RICS_2D_Imm_Shift_blinking.miafit  RICS_2D_Imm_with_blinking.miafit  RICS_Mod_Imm_with_Shift.miafit  RICS_Mod_Imm_with_blinking.miafit  RICS_Simple2D.miafit  RICS_Simple3D.miafit  Standard.txt  Standard_MIA.miafit  TauFit_1exp.txt  TauFit_2exp.txt  iMSD_Free_Dif.miafit  iMSD_Free_Dif_2D_N.miafit  iMSD_Free_Dif_3D_N.miafit  iMSD_Mob_Immob_Free_Dif.miafit  (+3 more)
TauFit Models/: convol.m  fitfun_1exp.m  fitfun_2exp.m  fitfun_2exp_aniso.m  fitfun_3exp.m  fitfun_aniso.m  fitfun_aniso_2exp.m  fitfun_dist.m  fitfun_dist_donly.m
functions/: CloseWindow.m  CrossCorrelation.m  GenerateName.m  GetAppFolder.m  LSUserValues.m  Mat2clip.m  PTU_Image.m  StartParPool.m  compile_PAM.sh  dark_mode.m  fminsearchbnd.m  generate_path_for_compilation.m  get_date_modified.m  iconbutton.m  plot_to_txt.m  plotmatrix_kde.m  print_eps.m
functions/BurstBrowser/: AddCutToSpecies.m  AddDerivedParameters.m  AddSpecies.m  ApplyCorrections.m  ApplyCutsToLoaded.m  BBSampleData.m  BVA_consistency.m  BVA_dynamic_FRET.m  BVA_expData.m  BurstBrowser_KeyPress.m  BurstWise_To_TimeWindow.m  Bursts_to_Timebins.m  Calc_fFCS_Filters.m  CalculateGamma.m  CalculateGammaGUI.m  Calculate_Settings.m  ChangePlotType.m  Database.m  (+100 more)
functions/PDAFit/histogram_library/pdalib-master/: CMakeLists.txt  README.md
functions/PDAFit/histogram_library/pdalib-master/include/: Pda.h
functions/PDAFit/histogram_library/pdalib-master/pyext/: CMakeLists.txt  numpy.i  pda.i
functions/PDAFit/histogram_library/pdalib-master/src/: Pda.cpp
tcPDA C-Code/: MHsample.m  MWGsample.m  eval_prob_3c_bg_C.m  eval_prob_3c_bg_C_mex.mexmaci64  eval_prob_3c_bg_burstwise.m  eval_prob_3c_bg_burstwise_mex.mexmaci64  eval_prob_3c_bg_cuda.mexw64  eval_prob_binwise.prj  mex_CUDA_win64.xml  mex_CUDA_win64_debug.xml  mex_CUDA_win64_dynamic.xml  mex_CUDA_win64_orig.xml  optimplotfval_tcPDA.m  psplotchange.m  sim_hist_mc_dist_3d_cor_optim.m
temp/: metadata.yaml
(+578 files in other folders)
